# soop-studio

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  obs-bin-xcopy-exclude-list.txt  obs-data-xcopy-exclude-list.txt  obs-plugin-xcopy-exclude-list.txt
include/: qt-wrapper.h
platform/mac/platform/: platform-osx.mm
platform/win/platform/: platform-windows.cpp
res-license/: privacy-policy.html  program-terms-conditions.html
src/Application/: CAppStyling.cpp  CAppStyling.h  CApplication.cpp  CApplication.h  CProxyStyle.cpp  CProxyStyle.h
src/Blocks/: CBaseDockWidget.cpp  CBaseDockWidget.h  CDockTitle.cpp  CDockTitle.h
src/Blocks/AdvanceControlsDock/: CAdvanceControlsDockWidget.cpp  CAdvanceControlsDockWidget.h
src/Blocks/AudioMixerDock/: CAudioAdvControl.cpp  CAudioAdvControl.h  CAudioAdvSettingWidget.cpp  CAudioAdvSettingWidget.h  CAudioMixerDockWidget.cpp  CAudioMixerDockWidget.h  CVolumeControl.cpp  CVolumeControl.h
src/Blocks/BroadInfoDock/: CBroadInfoDockWidget.cpp  CBroadInfoDockWidget.h
src/Blocks/SceneControlDock/: CProjector.cpp  CProjector.h  CSceneControlDockWidget.cpp  CSceneControlDockWidget.h
src/Blocks/SceneSourceDock/: CListViewScrollArea.cpp  CListViewScrollArea.h  CListViewScrollAreaContent.cpp  CListViewScrollAreaContent.h  CSceneListItem.cpp  CSceneListItem.h  CSceneListView.cpp  CSceneListView.h  CSceneSourceDockWidget.cpp  CSceneSourceDockWidget.h  CSourceListView.cpp  CSourceListView.h
src/Common/: CURLMiscUtils.h  ColorMiscUtils.h  EventFilterUtils.h  MathMiscUtils.h  SettingsMiscDef.h  StringMiscUtils.h  TSafeSingleton.h
src/CoreModel/Action/: CHotkeyContext.cpp  CHotkeyContext.h
src/CoreModel/Audio/: CAudio.cpp  CAudio.h  CAudio.inl
src/CoreModel/Auth/: CAuthManager.cpp  CAuthManager.h  SBaseAuth.h
src/CoreModel/Browser/: CCefManager.cpp  CCefManager.h
src/CoreModel/Config/: CArgOption.cpp  CArgOption.h  CConfigManager.cpp  CConfigManager.h  CMakeDirectory.cpp  CMakeDirectory.h  CStateAppContext.cpp  CStateAppContext.h
src/CoreModel/Encoder/: CEncoder.cpp  CEncoder.h  CEncoder.inl
src/CoreModel/Graphics/: CGraphicsContext.cpp  CGraphicsContext.h  CGraphicsContext.inl  CGraphicsMiscUtils.inl
src/CoreModel/Icon/: CIconContext.cpp  CIconContext.h
src/CoreModel/Locale/: CLocaleTextManager.cpp  CLocaleTextManager.h
src/CoreModel/Log/: CLogManager.cpp  CLogManager.h  CLogManager.inl  COBSProfiler.cpp  COBSProfiler.h
src/CoreModel/OBSData/: CInhibitSleepContext.cpp  CInhibitSleepContext.h  CLoadSaveManager.cpp  CLoadSaveManager.h  SBaseLexer.h
src/CoreModel/OBSOutput/: COBSOutputContext.cpp  COBSOutputContext.h  SBasicOutputHandler.cpp  SBasicOutputHandler.h
src/CoreModel/Output/: AdvanceOutput.cpp  AdvanceOutput.h  COutput.inl  SimpleOutput.cpp  SimpleOutput.h
src/CoreModel/Profile/: CProfile.cpp  CProfile.h  CProfile.inl
src/MainFrame/: CBlockPopup.cpp  CBlockPopup.h  CMainAccountButton.cpp  CMainAccountButton.h  CMainBaseWidget.cpp  CMainBaseWidget.h  CMainFrame.cpp  CMainFrame.h  CMainFrameGuide.cpp  CMainFrameGuide.h  CMainFrame_Auth.cpp  CMainFrame_DropFile.cpp  CMainFrame_LoadSave.cpp  CMainFrame_Output.cpp  CMainFrame_SceneSource.cpp  CMainFrame_Undo.cpp  CMustRaiseMainFrameEventF.h  CResourceExtension.cpp  CResourceExtension.h  CStatusbarTemp.cpp  CStatusbarTemp.h  CSystemAlert.cpp  CSystemAlert.h  CUIValidation.cpp  CUIValidation.h
src/PopupWindows/: CAutoConfigStackedWidget.cpp  CAutoConfigStackedWidget.h  CBalloonWidget.cpp  CBalloonWidget.h  CBasicFilters.cpp  CBasicFilters.h  CBasicTransform.cpp  CBasicTransform.h  CBrowserInteractionDialog.cpp  CBrowserInteractionDialog.h  CCustomColorDialog.cpp  CCustomColorDialog.h  CCustomFontDialog.cpp  CCustomFontDialog.h  CGuideWidget.cpp  CGuideWidget.h  CImporterDialog.cpp  CImporterDialog.h  CMissingFilesDialog.cpp  CMissingFilesDialog.h  CProgramInfoDialog.cpp  CProgramInfoDialog.h  CRemuxFrame.cpp  CRemuxFrame.h  CSceneTransitionsDialog.cpp  CSceneTransitionsDialog.h  CStatFrame.cpp  CStatFrame.h
src/UIComponent/: CAudioEncoders.cpp  CAudioEncoders.h  CBalanceSlider.h  CBaseClickWidget.cpp  CBaseClickWidget.h  CBaseClickableLabel.hpp  CBasicHoverWidget.cpp  CBasicHoverWidget.h  CBasicPreview.cpp  CBasicPreview.h  CBasicToggleButton.cpp  CBasicToggleButton.h  CBlockButtonWidget.cpp  CBlockButtonWidget.h  CBorderPopupBaseWidget.cpp  CBorderPopupBaseWidget.h  CColorSelect.h  CCustomCombobox.cpp  CCustomCombobox.h  CCustomDoubleSpinbox.cpp  CCustomDoubleSpinbox.h  CCustomMenu.cpp  CCustomMenu.h  CCustomPushbutton.cpp  CCustomPushbutton.h  CCustomSpinbox.cpp  CCustomSpinbox.h  CDoubleSlider.cpp  CDoubleSlider.h  CElidedSlideLabel.cpp  CElidedSlideLabel.h  CFocusList.cpp  CFocusList.h  CHScrollArea.h  CHotkeyComponent.cpp  CHotkeyComponent.h  CItemWidgetHelper.h  CLoginToggleFrame.cpp  CLoginToggleFrame.h  CMediaSlider.cpp  (+38 more)
src/Utils/: AFScreenshotObj.cpp  AFScreenshotObj.h  CJsonController.cpp  CJsonController.h  CStatusLogManager.cpp  CStatusLogManager.h  qt-wrappers.cpp
src/ViewModel/: CApplicationInitializer.cpp  CApplicationInitializer.h
src/platform/: platform.hpp
src/ui-forms/: Remux.ui  add-stream-widget.ui  advance-controls-dock.ui  advanced-setting-area.ui  aneta-main-frame.ui  aneta-main-resource.qrc  aneta-main-window.ui  audio-adv-setting-area.ui  audio-mixer-dock.ui  audio-setting-area.ui  auto-config-finish-page.ui  auto-config-stacked-widget.ui  auto-config-start-page.ui  auto-config-stream-page.ui  auto-config-test-page.ui  auto-config-video-page.ui  balloon-widget.ui  basic-filters.ui  block-basic-dock-title.ui  block-button-widget.ui  block-popup.ui  broad-info-dock.ui  browser-interaction-dialog.ui  color-select.ui  custom-browser-collection.ui  custom-browser-widget.ui  custom-color-dialog.ui  custom-font-dialog.ui  dock-popup-widget.ui  hotkey-setting-area.ui  hotkey-widget.ui  importer-dialog.ui  login-toggle-frame.ui  main-account-button.ui  main-frame-guide.ui  main-studio-mode-view.ui  main-vertical-studio-mode-view.ui  media-control-panel.ui  missing-files-dialog.ui  program-guide-item.ui  (+24 more)
(+125 files in other folders)
